Update Docs for v2025.8 (#16)
* Added core class references

* Core Rewrite Doc Update Part 2

* Update Data and Geometry Generation member and method descriptions

* Fix and clarify Data and GeoGenerator descriptions

* Manual Update to 2025.8

Core rewrite update. Made some descriptions less vague or more accurate. Added new core classes. Updated some tutorial stuff, helpful links. See diffs for details.

---------

Co-authored-by: Vera Lux <90056029+sinewavey@users.noreply.github.com>

--- a/FuncGodot Manual/pages/sidenav.html
+++ b/FuncGodot Manual/pages/sidenav.html
@@ -43,14 +43,15 @@
         <p class="sidenav"><a href="guide_building_maps.html" target="main">Building Maps</a></p>
         <p class="sidenav2">
             <a href="guide_building_maps.html#InverseScaleFactor" target="main">Inverse Scale Factor</a><br>
-            <a href="guide_building_maps.html#TrenchbroomHierarchy" target="main">TrenchBroom Groups Hierarchy</a><br>
+            <a href="guide_building_maps.html#GroupsHierarchy" target="main">Groups Hierarchy</a><br>
             <a href="guide_building_maps.html#DefaultMapSettings" target="main">Default Map Settings</a><br>
             <a href="guide_building_maps.html#Building" target="main">Building</a>
         </p>
 
         <h3 class="sidenav">Class Reference</h3>
         <p class="sidenav">
-            <a href="ref_local_config.html" target="main">FuncGodot Local Config</a><br>
+            <a href="ref_local_config.html" target="main">Project Settings</a><br>
+            <a href="ref_local_config.html#LocalConfig" target="main">FuncGodot Local Config</a><br>
             <a href="ref_fgd_resources.html" target="main">FuncGodot FGD Resources</a>
         </p>
         <p class="sidenav2">
@@ -86,13 +87,26 @@
         <p class="sidenav2">
             <a href="ref_func_godot_map.html#MapSettings" target="main">FuncGodot Map Settings</a>
         </p>
-        <!--<h3 class="sidenav">Core Classes</h3>
+        
+        <p class="sidenav"><a href="ref_util.html" target="main">FuncGodot Util</a></p>
+        <p class="sidenav"><a href="ref_data.html" target="main">FuncGodot Data</a></p>
+        <p class="sidenav2">
+            <a href="ref_data.html#face" target="main">Face Data</a><br>
+            <a href="ref_data.html#brush" target="main">Brush Data</a><br>
+            <a href="ref_data.html#patchdef" target="main">Patch Data</a><br>
+            <a href="ref_data.html#group" target="main">Group Data</a><br>
+            <a href="ref_data.html#entity" target="main">Entity Data</a>
+        </p>
+        <p class="sidenav"><a href="ref_parser.html" target="main">FuncGodot Parser</a></p>
+        <p class="sidenav"><a href="ref_geo_generator.html" target="main">FuncGodot Geometry Generator</a></p>
+        <p class="sidenav"><a href="ref_ent_assembler.html" target="main">FuncGodot Entity Assembler</a></p>
+        <!--
+        <h3 class="sidenav">Build Process</h3>
         <p class="sidenav">
-            <a href="core_func_godot.html" target="main">FuncGodot</a><br>
-            <a href="core_map_data.html" target="main">Map Data</a><br>
-            <a href="core_map_parser.html" target="main">Map Parser</a><br>
-            <a href="core_geo_generator.html" target="main">Geo Generator</a><br>
-            <a href="core_surface_gatherer.html" target="main">Surface Gatherer</a>
+            <a href="build_process.html#Map" target="main">Map</a><br>
+            <a href="build_process.html#Parser" target="main">Parse</a><br>
+            <a href="build_process.html#GeoGen" target="main">Geometry Generation</a><br>
+            <a href="build_process.html#Ent" target="main">Entity Assembly</a>
         </p>-->
         <h3 class="sidenav">Tips and Tricks</h3>
         <p class="sidenav">
