--- a/FuncGodot Manual/pages/ref_fgd_resources.html
+++ b/FuncGodot Manual/pages/ref_fgd_resources.html
@@ -263,10 +263,21 @@
                 <td>Controls whether a MeshInstance3D is built for this Solid Class.</td>
             </tr>
             <tr>
+                <td>Global Illumination Mode</td>
+                <td><a href="https://docs.godotengine.org/en/stable/classes/class_geometryinstance3d.html#enum-geometryinstance3d-gimode" target="_blank">GIMode</a></td>
+                <td>
+                    Global illumination mode for the generated <i>MeshInstance3D</i>. Setting to <b>GI_MODE_STATIC</b> will unwrap the mesh's UV2 during build. See the 
+                    <a href="https://docs.godotengine.org/en/stable/classes/class_geometryinstance3d.html#enum-geometryinstance3d-gimode" target="_blank">Godot documentation</a> 
+                    for more information.
+                </td>
+            </tr>
+            <!--<tr>
                 <td>Use In Baked Light</td>
                 <td>Bool</td>
-                <td>Sets generated MeshInstance3D to be available for UV2 unwrapping after FuncGodotMap build. Utilized in baked lightmapping.</td>
-            </tr>
+                <td>
+                    Sets generated MeshInstance3D to be available for UV2 unwrapping after FuncGodotMap build. Utilized in baked lightmapping.
+                </td>
+            </tr>-->
             <tr>
                 <td>Shadow Casting Setting</td>
                 <td><a href="https://docs.godotengine.org/en/stable/classes/class_geometryinstance3d.html#enum-geometryinstance3d-shadowcastingsetting" target="_blank">ShadowCastingSetting</a></td>
