--- a/FuncGodot Manual/pages/guide_building_maps.html
+++ b/FuncGodot Manual/pages/guide_building_maps.html
@@ -75,10 +75,10 @@
             <img src="../images/guide_build_isf2.png" alt="1x1 Godot Unit Block" height="300px">
         </p>
         <p>
-            <i>NOTE: Accounting for the Inverse Scale Factor in your class scripts will better allow you to design your entities within the map editor, i.e: 
+            <blockquote><i>NOTE: Accounting for the Inverse Scale Factor in your class scripts will better allow you to design your entities within the map editor, i.e: 
                 using Quake Units to determine a moving platforms travel distance in your map editor and on import letting your node script translate that value 
                 into Godot Units using your Inverse Scale Factor.
-            </i>
+            </i></blockquote>
         </p>
 
         <h2 id="Hierarchy">Use Groups Hierarchy</h2>
