--- a/FuncGodot Manual/pages/ref_data.html
+++ b/FuncGodot Manual/pages/ref_data.html
@@ -335,12 +335,17 @@
                 <td>Return type</td>
             </tr>
             <tr>
-                <td>is_convex()</td>
+                <td>is_visual()</td>
+                <td>Checks the entity's FGD resource definition, returning whether the Solid Class has a <i>MeshInstance3D</i> built for it.</td>
+                <td>Bool</td>
+            </tr>
+            <tr>
+                <td>is_collision_convex()</td>
                 <td>Checks the entity's FGD resource definition, returning whether the Solid Class CollisionShapeType is set to Convex.</td>
                 <td>Bool</td>
             </tr>
             <tr>
-                <td>is_concave()</td>
+                <td>is_collision_concave()</td>
                 <td>Checks the entity's FGD resource definition, returning whether the Solid Class CollisionShapeType is set to Concave.</td>
                 <td>Bool</td>
             </tr>
