--- a/FuncGodot Manual/pages/ref_geo_generator.html
+++ b/FuncGodot Manual/pages/ref_geo_generator.html
@@ -80,8 +80,8 @@
                 <td>Array[int]</td>
             </tr>
             <tr>
-                <td>create_patch_mesh(data: array[PatchData], mesh: Mesh)</td>
-                <td></td>
+                <td>create_patch_mesh(data: Array[PatchData], mesh: Mesh)</td>
+                <td>Not yet implemented.</td>
                 <td></td>
             </tr>
             
