--- a/FuncGodot Manual/pages/ref_key_value_pairs.html
+++ b/FuncGodot Manual/pages/ref_key_value_pairs.html
@@ -94,6 +94,11 @@
                 <td></td>
             </tr>
             <tr>
+                <td><a href="https://docs.godotengine.org/en/stable/classes/class_string.html" target="_blank">StringName</a></td>
+                <td>string</td>
+                <td></td>
+            </tr>
+            <tr>
                 <td><a href="https://docs.godotengine.org/en/stable/classes/class_bool.html" target="_blank">Bool</a></td>
                 <td>choices</td>
                 <td>Automatically sets up options "No" and "Yes" with values "0" and "1" respectively.</td>
