--- a/FuncGodot Manual/pages/sidenav.html
+++ b/FuncGodot Manual/pages/sidenav.html
@@ -68,7 +68,8 @@
             <a href="ref_key_value_pairs.html#ApplyingKeyValues" target="main">Applying Key Values</a><br>
             <a href="ref_key_value_pairs.html#PropertyTypes" target="main">Property Types</a><br>
             <a href="ref_key_value_pairs.html#Choices" target="main">Choices</a><br>
-            <a href="ref_key_value_pairs.html#BitFlags" target="main">Bit Flags</a>
+            <a href="ref_key_value_pairs.html#BitFlags" target="main">Bit Flags</a><br>
+            <a href="ref_key_value_pairs.html#BuildStageProperties" target="main">Build Stage Properties</a>
         </p>
 
         <p class="sidenav"><a href="ref_trenchbroom_resources.html" target="main">TrenchBroom Resources</a></p>
