--- a/FuncGodot Manual/pages/ref_key_value_pairs.html
+++ b/FuncGodot Manual/pages/ref_key_value_pairs.html
@@ -8,6 +8,7 @@
 <body class="main">
     <div class="main">
         <h1>Entity Key Value Pairs</h1>
+        <h2>What Are Key Value Pairs?</h2>
         <p>
             Key Value Pairs are the most powerful aspect of FuncGodot. All of the <i>Class Properties</i> set in a 
             <a href="ref_fgd_resources.html#Entity" target="main">FuncGodotFGDEntity</a> definition get added to the corresponding entity placed in the map editor. 
