--- a/FuncGodot Manual/pages/ref_local_config.html
+++ b/FuncGodot Manual/pages/ref_local_config.html
@@ -8,7 +8,7 @@
 <body class="main">
     <div class="main">
         <h1>Project Settings</h1>
-        <p><img src="../images/ref_proj_sets.png"></p>
+        <!--<p><img src="../images/ref_proj_sets.png"></p>-->
 
         <p>FuncGodot adds a few helpful Project Settings to Godot.</p>
 
@@ -48,7 +48,7 @@
         <br><hr>
 
         <h1 id="LocalConfig">FuncGodotLocalConfig</h1>
-        <p><img src="../images/ref_local_config.png"></p>
+        <!--<p><img src="../images/ref_local_config.png"></p>-->
 
         <p>Local machine project wide settings. Can define global defaults for some FuncGodot properties.</p>
         <h3>DO NOT CREATE A NEW RESOURCE!</h3>
