--- a/FuncGodot Manual/pages/ref_netradiant_custom_resources.html
+++ b/FuncGodot Manual/pages/ref_netradiant_custom_resources.html
@@ -15,7 +15,7 @@
         </p>
 
         <h2 id="GamepackConfig">NetRadiantCustomGamepackConfig</h2>
-        <p><img src="../images/ref_nrc_gamepackconfig.png"></p>
+        <!--<p><img src="../images/ref_nrc_gamepackconfig.png"></p>-->
         <p>Builds a gamepack for NetRadiant Custom.</p><br>
         <table class="props">
             <tr class="header">
@@ -109,7 +109,7 @@
         <br><hr>
 
         <h2 id="Shader">NetRadiantCustomShader</h2>
-        <p><img src="../images/ref_nrc_shader.png"></p>
+        <!--<p><img src="../images/ref_nrc_shader.png"></p>-->
         <p>Resource that gets built into a shader file that applies a special effect to a specified texture in NetRadiant Custom.</p><br>
         <table class="props">
             <tr class="header">
