--- a/FuncGodot Manual/pages/sidenav.html
+++ b/FuncGodot Manual/pages/sidenav.html
@@ -28,7 +28,8 @@
         <p class="sidenav"><a href="guide_textures.html" target="main">Textures</a><br></p>
         <p class="sidenav2">
             <a href="guide_textures.html#HowTexWork" target="main">How Textures Work In FuncGodot</a><br>
-            <a href="guide_textures.html#AutomaticPBRGeneration" target="main">Automatic PBR Generation</a><br>
+            <a href="guide_textures.html#AutomaticPBRGeneration" target="main">Automatic PBR / ORM Generation</a><br>
+            <a href="guide_textures.html#ShaderMaterialUniformMapping" target="main">Shader Material Uniform Mapping</a><br>
             <a href="guide_textures.html#ClipAndSkip" target="main">Clip and Skip</a><br>
             <a href="guide_textures.html#Origin" target="main">The Origin Texture</a><br>
             <a href="guide_textures.html#WADFiles" target="main">WAD Files</a><br>
@@ -48,6 +49,16 @@
             <a href="guide_building_maps.html#Building" target="main">Building</a>
         </p>
 
+        <h3 class="sidenav">Entity Key Value Pairs</h3>
+        <p class="sidenav">
+            <a href="ref_key_value_pairs.html" target="main">What Are Key Value Pairs?</a><br>
+            <a href="ref_key_value_pairs.html#ApplyingKeyValues" target="main">Applying Key Values</a><br>
+            <a href="ref_key_value_pairs.html#PropertyTypes" target="main">Property Types</a><br>
+            <a href="ref_key_value_pairs.html#Choices" target="main">Choices</a><br>
+            <a href="ref_key_value_pairs.html#BitFlags" target="main">Bit Flags</a><br>
+            <a href="ref_key_value_pairs.html#BuildStageProperties" target="main">Build Stage Properties</a>
+        </p>
+
         <h3 class="sidenav">Class Reference</h3>
         <p class="sidenav">
             <a href="ref_local_config.html" target="main">Project Settings</a><br>
@@ -62,16 +73,6 @@
             <a href="ref_fgd_resources.html#Point" target="main">FuncGodot FGD Point Class</a><br>
             <a href="ref_fgd_resources.html#ModelPoint" target="main">FuncGodot FGD Model Point Class</a>
         </p>
-
-        <p class="sidenav"><a href="ref_key_value_pairs.html" target="main">Entity Key Value Pairs</a></p>
-        <p class="sidenav2">
-            <a href="ref_key_value_pairs.html#ApplyingKeyValues" target="main">Applying Key Values</a><br>
-            <a href="ref_key_value_pairs.html#PropertyTypes" target="main">Property Types</a><br>
-            <a href="ref_key_value_pairs.html#Choices" target="main">Choices</a><br>
-            <a href="ref_key_value_pairs.html#BitFlags" target="main">Bit Flags</a><br>
-            <a href="ref_key_value_pairs.html#BuildStageProperties" target="main">Build Stage Properties</a>
-        </p>
-
         <p class="sidenav"><a href="ref_trenchbroom_resources.html" target="main">TrenchBroom Resources</a></p>
         <p class="sidenav2">
             <a href="ref_trenchbroom_resources.html#GameConfig" target="main">TrenchBroom Game Config</a><br>
