--- a/FuncGodot Manual/pages/guide_textures.html
+++ b/FuncGodot Manual/pages/guide_textures.html
@@ -88,8 +88,8 @@
 
         <h2 id="AutomaticPBRGeneration">Automatic PBR / ORM Generation</h2>
         <p>
-            You may have noticed that we skipped over a few settings before, all of them with the suffic "Map Pattern". FuncGodot has the ability to 
-            automatically generate PBR and ORM materials on build. Each of the "Map Pattern" properties tell FuncGodot's Texture Loader how to find each texture map for our material. 
+            You may have noticed that we skipped over a few settings before, all of them with the suffix "Map Pattern". When using a Default Material extending from <a href="https://docs.godotengine.org/en/stable/classes/class_basematerial3d.html" target="_blank">BaseMaterial3D</a>, 
+            FuncGodot has the ability to automatically generate PBR and ORM materials on build. Each of the "Map Pattern" properties tell FuncGodot's Texture Loader how to find each texture map for our material. 
         </p>
         <p><i>What's with all the %s everywhere?</i></p>
         <p>
@@ -99,10 +99,26 @@
             and it is currently checking for the "png" Texture File Extension, then it will be looking to see if the texture resource "rock_normal.png" exists, and if so it will 
             be applied to the Map Settings' Default Material if it is a StandardMaterial3D.
         </p>
+
         <p>
             FuncGodot will look for PBR / ORM texture maps in both the same folder as the texture applied in the map file, or it will look in a subfolder with the same name. As an example: 
             a brush is applied with the "textures/rock" texture in TrenchBroom, FuncGodot will first look for "textures/rock_normal.png" and then check "textures/rock/rock_normal.png".
         </p>
+
+        <h2 id="ShaderMaterialUniformMapping">Shader Material Uniform Mapping</h2>
+        <p>
+            So you've decided to use a <a href="https://docs.godotengine.org/en/stable/classes/class_shadermaterial.html" target="_blank">ShaderMaterial</a> with a custom GDShader. 
+            FuncGodot has the ability to automatically assign textures to your shader uniforms when generating ShaderMaterials on build through the use of the use of Map Settings' 
+            <i>shader_material_uniform_map_patterns</i> Dictionary.
+        </p>
+        <p>
+            The dictionary is fairly straightforward: add your shader's uniforms as the dictionary's keys, while your values are the naming patterns for that uniform's textures. 
+            Unlike Automatic PBR generation, you only use one placeholder token, used for the base texture's name. An example of an entry would be a key "normal_map" 
+            paired with a value "%s_n"; if FuncGodot finds a texture named "textures/brick.png", it will then search for "textures/brick_n.png" 
+            and assign it to the generated ShaderMaterial's "normal_map" uniform.
+        </p>
+        
+        <blockquote><i>NOTE: When using PBR materials with TrenchBroom, remember that you can add <i>Texture Exclusion Patterns</i> to the TrenchBroom Game Config to hide specific textures in the editor.</i></blockquote>
 
         <h2 id="ClipAndSkip">Clip and Skip Textures</h2>
 
