--- a/FuncGodot Manual/pages/ref_trenchbroom_resources.html
+++ b/FuncGodot Manual/pages/ref_trenchbroom_resources.html
@@ -15,7 +15,7 @@
         </p>
 
         <h2 id="GameConfig"></h2>
-        <p><img src="../images/ref_tb_gameconfig.png"></p>
+        <!--<p><img src="../images/ref_tb_gameconfig.png"></p>-->
         <p>Defines a game in TrenchBroom to express a set of entity definitions and editor behaviors.</p><br>
         <table class="props">
             <tr class="header">
@@ -122,7 +122,7 @@
         <br><hr>
 
         <h2 id="Tag">TrenchBroomTag</h2>
-        <p><img src="../images/ref_tb_tag.png"></p>
+        <!--<p><img src="../images/ref_tb_tag.png"></p>-->
         <p>
             Pattern matching tags to enable a number of features in TrenchBroom, including display appearance, menu filtering options, and keyboard shortcuts. 
             This resource gets added to the <i>TrenchBroomGameConfig</i> resource. It does not affect appearance or functionality in Godot. See the TrenchBroom Documentation on 
